# pycomprepair

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  RELEASING.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  self-dogfood.yml
docs/: plugins.md
examples/: demo.py  demo_django.py  demo_sqlalchemy.py  github-action.yml
src/pycomprepair/: __init__.py  cli.py  config.py  lsp.py
src/pycomprepair/codemods/: __init__.py  helpers.py
src/pycomprepair/core/: __init__.py  engine.py  issue.py  plugin.py
src/pycomprepair/discovery/: __init__.py  api_index.py  attr_check.py  cache.py  fix.py  import_check.py  known_fixes.py  suggest.py
src/pycomprepair/plugins/: __init__.py  django_v5.py  fastapi_migration.py  numpy_v2.py  pandas_v2.py  pydantic_v2.py  sqlalchemy_v2.py
src/pycomprepair/report/: __init__.py  markdown.py  sarif.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_codemod.py  test_discovery.py  test_discovery_attrs.py  test_discovery_cache.py  test_django_plugin.py  test_engine.py  test_fastapi_plugin.py  test_golden_demo.py  test_lsp.py  test_markdown_report.py  test_numpy_plugin.py  test_pandas_plugin.py  test_pydantic_plugin.py  test_repair_gates.py  test_sarif_report.py  test_sqlalchemy_plugin.py  test_v04_safety_and_dsc002_fix.py  test_v05_init_and_cache.py  test_v11_known_fixes_expansion.py  test_v11_suggest.py
tests/fixtures/: __init__.py  demo_pydantic_v2.expected.py
