[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pycomprepair"
version = "0.3.0"
description = "Semantic upgrade assistant and compatibility codemods for Python dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Álvaro Fernández" }]
maintainers = [{ name = "Álvaro Fernández" }]
keywords = [
    "migration",
    "codemod",
    "upgrade",
    "compatibility",
    "refactoring",
    "pydantic",
    "fastapi",
    "libcst",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "libcst>=1.4.0",
    "griffe>=1.0.0",
    "packaging>=23.2",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
    "types-PyYAML",
    "build>=1.2",
]

[project.scripts]
pycomprepair = "pycomprepair.cli:app"

[project.urls]
Homepage = "https://github.com/alvaroo-fdez/pycomprepair"
Documentation = "https://github.com/alvaroo-fdez/pycomprepair#readme"
Issues = "https://github.com/alvaroo-fdez/pycomprepair/issues"
Source = "https://github.com/alvaroo-fdez/pycomprepair"
Changelog = "https://github.com/alvaroo-fdez/pycomprepair/blob/main/CHANGELOG.md"

[project.entry-points."pycomprepair.plugins"]
pydantic = "pycomprepair.plugins.pydantic_v2:plugin"
fastapi = "pycomprepair.plugins.fastapi_migration:plugin"
sqlalchemy = "pycomprepair.plugins.sqlalchemy_v2:plugin"
django = "pycomprepair.plugins.django_v5:plugin"
numpy = "pycomprepair.plugins.numpy_v2:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pycomprepair"]

[tool.hatch.build.targets.sdist]
include = ["src/pycomprepair", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/pycomprepair"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["libcst.*", "griffe.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
